--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Fri Feb 26 02:24:28 CET 2010
+#Fri Feb 26 05:17:00 CET 2010
 eclipse.preferences.version=1
-encoding/<project>=utf-8
+encoding/<project>=UTF-8
